# Cinux

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
boot/: CMakeLists.txt  boot_info.h  mbr.S  stage2.S
boot/common/: boot.S  long_mode.S  serial.S
kernel/: CMakeLists.txt  errno.hpp  linker.ld  main.cpp
kernel/arch/: CMakeLists.txt
kernel/arch/x86_64/: ap_main.cpp  ap_trampoline.S  backtrace.cpp  boot.S  context_switch.S  cpuid.hpp  crt_stub.cpp  exception_handlers.cpp  fault_diag.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  interrupts.S  io.hpp  irq.hpp  irq_handlers.cpp  memory_layout.hpp  page_fault.cpp  paging.cpp  paging.hpp  paging_config.hpp  pic.cpp  pic.hpp  smp.hpp  syscall.S  syscall.cpp  syscall.hpp  tls.cpp  tls.hpp  usermode.S  usermode.cpp  usermode.hpp
kernel/data/: initrd.tar
kernel/data/initrd_contents/: hello.txt
kernel/drivers/: CMakeLists.txt  canvas.cpp  canvas.hpp  mouse.cpp  mouse.hpp  ram_block_device.hpp
kernel/drivers/acpi/: acpi.hpp  madt.cpp  rsdp.cpp  sdt.cpp
kernel/drivers/ahci/: ahci.cpp  ahci.hpp  ahci_block_device.cpp  ahci_block_device.hpp  ahci_config.hpp
kernel/drivers/apic/: local_apic.cpp  local_apic.hpp
kernel/drivers/dma/: prdt_builder.hpp
kernel/drivers/keyboard/: hid.hpp  keyboard.cpp  keyboard.hpp  usb_keyboard.cpp  usb_keyboard.hpp
kernel/drivers/mouse/: hid.hpp  mouse.cpp  mouse.hpp  mouse_stub.cpp  usb_mouse.cpp  usb_mouse.hpp  usb_tablet.cpp  usb_tablet.hpp
kernel/fs/: CMakeLists.txt  devfs.cpp  devfs.hpp  devfs_init.cpp  ext2.hpp  ext2_block.cpp  ext2_common.cpp  ext2_common.hpp  ext2_directory.cpp  ext2_init.cpp  ext2_inode.cpp  ext2_types.hpp  file.cpp  file.hpp  inode.cpp  inode.hpp  path.cpp  path.hpp  procfs_init.cpp  ramdisk.cpp  ramdisk.hpp  ramdisk_config.hpp  stat.hpp  vfs_filesystem.hpp  vfs_mount.cpp  vfs_mount.hpp
kernel/gui/: CMakeLists.txt  desktop_icon.hpp  event.cpp  event.hpp  gui_init.cpp  gui_init.hpp  host_cinux.cpp  host_cinux.hpp  icon.hpp  terminal.cpp  terminal.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp  window_manager_input.cpp
kernel/ipc/: CMakeLists.txt  pipe.cpp  pipe.hpp  pipe_ops.cpp  pipe_ops.hpp
kernel/lib/: CMakeLists.txt  atomic.hpp  kallsyms.hpp  klog.cpp  klog.hpp  kprintf.cpp  kprintf.hpp  string.cpp  string.hpp
kernel/mini/: CMakeLists.txt  big_kernel_loader.cpp  big_kernel_loader.hpp  elf_loader.cpp  elf_loader.hpp  linker.ld  main.cpp
kernel/mm/: CMakeLists.txt  address_space.cpp  address_space.hpp  buddy.cpp  buddy.hpp  dedicated_caches.cpp  heap.cpp  heap.hpp  page_cache.cpp  page_cache.hpp  pmm.cpp  pmm.hpp  slab.cpp  slab.hpp  vma.cpp  vma.hpp  vmm.cpp  vmm.hpp
kernel/net/: CMakeLists.txt  arp.cpp  arp.hpp  buffer.hpp  icmp.cpp  icmp.hpp  ipv4.cpp  ipv4.hpp  loopback_device.cpp  loopback_device.hpp  net_device.hpp  net_init.hpp  net_stack.cpp  net_stack.hpp  net_types.hpp  protocol_handler.hpp  socket.cpp  socket.hpp  tcp.cpp  tcp.hpp  tcp_socket.cpp  tcp_socket.hpp  udp.cpp  udp.hpp  udp_socket.cpp  udp_socket.hpp  unix_registry.cpp  unix_socket.cpp  unix_socket.hpp
kernel/proc/: CMakeLists.txt  clone.cpp  cpu_context.hpp  elf_load.cpp  elf_load.hpp  elf_types.cpp  elf_types.hpp  execve.cpp  execve.hpp  fork.cpp  init.cpp  init.hpp  initial_stack.hpp  lockdep.cpp  lockdep.hpp  per_cpu.hpp  pid.cpp  pid.hpp  process.hpp  process_internal.hpp  process_new.cpp  roundrobin.cpp  scheduler.cpp  scheduler.hpp  shared_cwd.hpp  shell_launch.cpp  signal.cpp  signal.hpp  sync.cpp  sync.hpp  task_builder.cpp  task_builder.hpp  timer_queue.cpp  timer_queue.hpp  user_launch.cpp  user_launch.hpp
kernel/syscall/: CMakeLists.txt  path_util.cpp  path_util.hpp  poll_core.cpp  poll_core.hpp  sys_arch_prctl.cpp  sys_arch_prctl.hpp  sys_chdir.cpp  sys_chdir.hpp  sys_chmod.cpp  sys_chmod.hpp  sys_chown.cpp  sys_chown.hpp  sys_clock_gettime.cpp  sys_clock_gettime.hpp  sys_clone.cpp  sys_clone.hpp  sys_close.cpp  sys_close.hpp  sys_creat.cpp  sys_creat.hpp  sys_creds.cpp  sys_creds.hpp  sys_dmesg.cpp  sys_dmesg.hpp  sys_dup.cpp  sys_dup.hpp  sys_execve.cpp  sys_execve.hpp  sys_exit.cpp  sys_exit.hpp  sys_fcntl.cpp  sys_fcntl.hpp  sys_fork.cpp  sys_fork.hpp  sys_futex.cpp  sys_futex.hpp  sys_getcwd.cpp  sys_getcwd.hpp  sys_getdents.cpp  (+66 more)
kernel/test/: big_kernel_test.h  main_test.cpp  test_acpi.cpp  test_address_space.cpp  test_ahci.cpp  test_ahci_block_device.cpp  test_ahci_write.cpp  test_bitmap_icon.cpp  test_block_device.cpp  test_buddy.cpp  test_canvas.cpp  test_clone.cpp  test_creds.cpp  test_cwd_stat.cpp  test_desktop.cpp  test_e1000.cpp  test_ext2.cpp  test_ext2_allocator.cpp  test_ext2_inode_ops.cpp  test_ext2_ops.cpp  test_file_mmap.cpp  test_fork_exec.cpp  test_futex.cpp  test_gdt_idt.cpp  test_gui_dirty.cpp  test_gui_integration.cpp  test_gui_region.cpp  test_gui_swraster.cpp  test_heap.cpp  test_keyboard.cpp  test_klog.cpp  test_kmalloc.cpp  test_kprintf_format.cpp  test_mmap.cpp  test_mouse_event.cpp  test_multi_terminal.cpp  test_net.cpp  test_page_cache.cpp  test_pic_pit.cpp  test_pipe.cpp  (+34 more)
test/: CMakeLists.txt
test/framework/: test_framework.h
test/unit/: host_spinlock.cpp  test_address_space.cpp  test_ahci.cpp  test_ahci_write.cpp  test_ata.cpp  test_big_kernel_loader.cpp  test_bitmap_icon.cpp  test_canvas.cpp  test_cinux_base_types.cpp  test_console.cpp  test_cwd_stat.cpp  test_desktop.cpp  test_elf_loader.cpp  test_event_queue.cpp  test_ext2.cpp  test_ext2_allocator.cpp  test_ext2_inode_ops.cpp  test_ext2_ops.cpp  test_fd_table.cpp  test_font.cpp  test_fork_exec.cpp  test_framebuffer.cpp  test_gdt_idt.cpp  test_heap.cpp  test_hid.cpp  test_initial_stack.cpp  test_keyboard.cpp  test_kprintf.cpp  test_kprintf_format.cpp  test_mouse.cpp  test_multi_terminal.cpp  test_net_arp_cache.cpp  test_net_arp_module.cpp  test_net_buffer.cpp  test_net_checksum.cpp  test_net_dispatch.cpp  test_net_tcp.cpp  test_net_udp.cpp  test_pci.cpp  test_pic.cpp  (+24 more)
user/: CMakeLists.txt  linker.ld
user/libc/: printf.cpp  printf.hpp  string.cpp  string.hpp  syscall.cpp  syscall.h
(+393 files in other folders)
